--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,67 @@
 @import 'reset.scss';
 @import 'global';
 
+.header{
+  padding: 40px 0;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.menu{
+  &__list{
+    display: flex;
+  }
+  &__list-item + .menu__list-item{
+    padding-left: 35px;
+    text-transform: uppercase;
+    
+  }
+  &__list-link{
+    padding-bottom: 2px;
+    color: $title-color;
+    transition: all .3s;
+    text-decoration: none;
+    @extend %quicksand-400;
+    &:hover{
+      color: $accent-color;
+      border-bottom: 1px solid $accent-color;
+      @extend %quicksand-500;
+    }
+  }
+  &__list-link--active{
+    color: $accent-color;
+    border-bottom: 1px solid $accent-color;
+    text-transform: uppercase;
+    text-decoration: none;
+    @extend %quicksand-500;
+  }
+}
+
+  .user-nav{
+    display: flex;
+    &__link{
+      position: relative;
+    }
+    &__link + .user-nav__link{
+      padding-left: 25px;
+    }
+    &__num{
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: $accent-color;
+      top: -9px;
+      right: -14px;
+      font-size: 12px;
+      color: #fff;
+      text-align: center;
+      line-height: 20px;
+
+    }
+  }
 
 
 
