--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -3,10 +3,26 @@ body{
   font-size: 16px;
   line-height: 26px;
   @extend %quicksand-500;
+  display: flex;
+  flex-direction: column;
+}
+
+.main{
+  flex-grow: 1;
+}
+
+html, body{
+  height: 100%;
 }
 
 .container{
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+}
+a{
+  font-size: 16px;
+  line-height: 26px;
+  color: $default-color;
+  @extend %quicksand-500;
 }
