--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -41,29 +41,135 @@
   }
 }
 
-  .user-nav{
-    display: flex;
-    &__link{
-      position: relative;
-    }
-    &__link + .user-nav__link{
-      padding-left: 25px;
-    }
-    &__num{
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      background-color: $accent-color;
-      top: -9px;
-      right: -14px;
-      font-size: 12px;
-      color: #fff;
-      text-align: center;
-      line-height: 20px;
+.user-nav{
+  display: flex;
+  &__link{
+    position: relative;
+  }
+  &__link + .user-nav__link{
+    padding-left: 25px;
+  }
+  &__num{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: $accent-color;
+    top: -9px;
+    right: -14px;
+    font-size: 12px;
+    color: #fff;
+    text-align: center;
+    line-height: 20px;
 
+  }
+}
+
+footer{
+  background-color: $bg;
+  
+  
+}
+
+.footer-top{
+  padding: 70px 0 40px;
+  border-bottom: 1px solid #ececec;
+  display: flex;
+  &__contact{
+    width: 250px;
+    margin-right: 50px;
+  }
+  &__nav{
+    width: 170px;
+    margin-right: 30px;
+
+  }
+  &__item-form{
+    max-width: 470px;
+  }
+  &__logo{
+    margin-bottom: 33px;
+    display: block;
+  }
+  &__adress,
+  &__email,
+  &__phone{
+    margin-bottom: 12px;
+    display: block;
+  }
+  &__social-list{
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+  }
+  &__social-item + .footer-top__social-item{
+    padding-left: 18px;
+  }
+  &__social-link{
+    transition: all .3s;
+    path{
+      fill: $default-color;
+    }
+    &:hover{
+      path{
+        fill: $accent-color;
+      }
     }
   }
+  &__title{
+    color: $title-color;
+    @extend %roboto-400;
+    font-size: 22px;
+    line-height: 1;
+    margin-bottom: 40px;
+  }
+  &__link{
+    display: block;
+    margin-bottom: 12px;
+  }
+  &__text{
+    margin-bottom: 25px;
+  }
+  &__form-input{
+    background-color: #fff;
+    max-width: 300px;
+    width: 100%;
+    border: none;
+    padding: 12px 10px 12px 15px;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+    &::placeholder{
+      color: $default-color;
+      font-size: 16px;
+    }
+  }
+  &__form-btn{
+    border: none;
+    background-color: $accent-color;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 12px 24px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    cursor: pointer;
+  }
+
+  
+  
+  
+}
+
+.footer-bottom{
+  height: 75px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
+  
+  &__accept-img{
+    display: inline;
+    margin-left: 25px;
+    vertical-align: middle
+  }
+}
 
 
 
