added top-slider section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset.scss';
+@import '_libs.scss';
 @import 'global';
 
 .header{
@@ -144,12 +145,10 @@ footer{
   }
   &__form-btn{
     border: none;
-    background-color: $accent-color;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 12px 24px;
+    @extend %btn;
     box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
-    cursor: pointer;
+    padding: 12px 26px;
+    
   }
 
   
@@ -171,6 +170,93 @@ footer{
   }
 }
 
+.top-slider{
+  background-image: url(../images/top-slider_bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  &__container{
+    
+    max-width: 1560px ;
+  }
+  background-color: $bg;
+  padding-top: 65px;
+  &__title{
+    max-width: 670px;
+    @extend %roboto-700;
+    font-size: 58px;
+    line-height: 68px;
+    color: $title-color;
+    margin-bottom: 35px;
 
+
+
+  }
+  &__item{
+    display: flex !important;
+    justify-content: space-between;
+  }
+
+  &__content{
+    padding-left: 175px;
+    padding-top: 125px;
+  }
+  &__text{
+    max-width: 470px;
+    margin-bottom: 55px;
+  }
+  &__link{
+    @extend %btn;
+    padding: 14px 36px;
+    max-width: 130px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    
+  }
+  ul.slick-dots {
+    max-width: 200px;
+    position: absolute;
+    right: 45%;
+    
+  }
+  .slick-dots{
+    margin-top: -70px;
+    display: flex;
+    justify-content: space-between;
+    li{
+      line-height: 0;
+      padding: 0 5px;
+      button{
+        padding: 0;
+        font-size: 0;
+        background-color: transparent;
+        width: 26px;
+        height: 26px;
+        border-radius: 50%;
+        border: 1px solid transparent;
+        position: relative;
+        &::before{
+          content: "";
+          position: absolute;
+          width: 6px;
+          height: 6px;
+          border-radius: 50%;
+          background-color: $default-color;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+
+        }
+      }
+      &.slick-active{
+        button{
+          border-color: $accent-color;
+          &::before{
+            background-color: $accent-color;
+          }
+        }
+      }
+    }
+  }
+  
+}
 
 @import 'media';
