--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -171,7 +171,7 @@ footer{
 }
 
 .top-slider{
-  background-image: url(../images/top-slider_bg.png);
+  background-image: url(../images/decor/top-slider_bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   &__container{
@@ -257,6 +257,174 @@ footer{
     }
   }
   
+}
+
+.categories-info{
+  padding: 120px 0;
+  background-image: url(../images/decor/categories-left.png);
+  background-repeat: no-repeat;
+  background-position: center left;
+  &__inner{
+    background-image: url(../images/decor/categories-right.png);
+    background-repeat: no-repeat;
+    background-position: center right;
+    
+  }
+
+}
+.info{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 110px;
+  position: relative;
+  &::before,
+  &::after{
+    content: "";
+    position: absolute;
+
+  }
+  &::before{
+    background-image: url(../images/decor/info-before.png);
+    top: -40px;
+    left: -45px;
+    width: 120px;
+    height: 121px;
+    z-index: -1;
+  }
+  &::after{
+    background-image: url(../images/decor/info-after.png);
+    bottom: -23px;
+    right: -23px;
+    z-index: -1;
+    
+    width: 65px;
+    height: 57px;
+  }
+  &__item{
+    width: 370px;
+    padding: 60px 30px;
+    box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+  }
+  &__item-title{
+    margin: 35px 10px;
+    color: $title-color;
+    font-size: 25px;
+    @extend %roboto-400;
+  }
+}
+
+.categories{
+  
+  &__items{
+    display: grid;
+    min-height: 635px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 30px;
+
+  }
+  &__item{
+    
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding-top: 35px;
+    padding-left: 40px;
+    &:nth-child(1){
+      grid-row: span 2;
+      .categories__item-subtitle,
+      .categories__link:hover{
+        color: #5800e4;
+      }
+    }
+    &:nth-child(2){
+      grid-column: span 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-top: 0;
+      .categories__item-subtitle,
+      .categories__link:hover{
+        color: $accent-color;
+      }
+    }
+    &:nth-child(3){
+      .categories__item-subtitle,
+      .categories__link:hover{
+        color: #ffb534;;
+      }
+    }
+    &:nth-child(4){
+      .categories__item-subtitle,
+      .categories__link:hover{
+        color: #34c3ff;
+      }
+    }
+    &__item-subtitle{
+      
+      margin-bottom: 5px;
+    }
+    
+  }
+  &__item-title{
+    font-size: 22px;
+    color: $title-color;
+    margin-bottom: 16px;
+  }
+  &__link{
+    text-transform: uppercase;
+    color: $title-color;
+    @extend %roboto-400;
+    transition: all .3s
+  }
+}
+
+.video-fashion{
+  background-color: $bg;
+  background-image: url(../images/decor/video-pattern.png);
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  padding: 125px 0;
+  &__inner{
+    display: flex;
+  }
+  &__popup{
+    margin-right: 60px;
+    max-width: 530px;
+    width: 100%;
+    height: 480px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+  &__content{
+    max-width: 570px;
+
+    
+  }
+  &__subtitle{
+    padding-top: 75px;
+    font-size: 22px;
+    color: $accent-color;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+
+  }
+  &__title{
+    text-align: left;
+    
+  }
+  &__text{
+    margin-bottom: 55px;
+  }
+  &__link{
+    @extend %btn;
+    max-width: 100px;
+  }
 }
 
 @import 'media';
