--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -565,6 +565,7 @@ footer{
   display: flex;
   justify-content: space-between;
   margin-top: 55px;
+  
 }
 &__clock-item{
   background-color: #fff;
@@ -575,6 +576,7 @@ footer{
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
   span{
     font-size: 48px;
     @extend %roboto-700;
@@ -582,6 +584,7 @@ footer{
     color: $title-color;
   }
 }
+
 &__text{
 
 }
@@ -605,6 +608,108 @@ footer{
 
   }
 }
+
+.blog{
+  padding: 50px 0 160px;
+  background-image: url('../images/blog.png');
+  background-repeat: no-repeat;
+
+  background-position: center center;
+  &__items{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    &::after{
+      content: "";
+      position: absolute;
+      right: -20px;
+      top: -25px;
+      z-index: -1;
+      width: 126px;
+      height: 53px;
+      background-image: url('../images/decor/blog.png');
+    }
+    
+  }
+  &__item{
+    max-width: 358px;
+    border: 1px solid #ececec;
+    transition: all .3s;
+    &:hover{
+      box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+      border: none;
+    
+    .blog__item-link{
+      color: $accent-color;
+      &::after{
+        background-image: url('../images/icons/arrow\ -accent.svg');
+      }
+    }
+  }
+  
+  }
+  &__item-imglink{
+    
+    display: block;
+    img{
+      height: 280px;
+      object-fit: cover;
+    }
+  }
+  &__item-box{
+    padding: 30px 40px;
+  }
+  &__item-info{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  &__item-author,
+  &__item-date{
+    padding-left: 30px;
+    position: relative;
+    &::before{
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 0;
+      top: 3px;
+
+    }
+  }
+
+  &__item-author::before{
+    background-image: url('../images/icons/user-gray.png');
+  }
+  &__item-date::before{
+    background-image: url('../images/icons/time.png');
+  }
+  &__item-title{
+    @extend %roboto-400;
+    color: $title-color;
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
+  &__item-link{
+    position: relative;
+    transition: all .3s;
+  }
+  &__item-link::after{
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 8px;
+    background-image: url('../images/icons/arrow.svg');
+    top: 10px;
+    right: 175px;
+  }
+
+}
+
+
+
+
 
 
 
